JumpScript/tests/baselines/reference/project/cantFindTheModule/node/cantFindTheModule.errors.txt
decl.jump(1,26): error TS2307: Cannot find module './foo/bar.tx'.
decl.jump(2,26): error TS2307: Cannot find module 'baz'.
decl.jump(3,26): error TS2307: Cannot find module './baz'.


==== decl.jump (3 errors) ====
    import modErr  = require("./foo/bar.tx");
                             ~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './foo/bar.tx'.
    import modErr1 = require("baz");
                             ~~~~~
!!! error TS2307: Cannot find module 'baz'.
    import modErr2 = require("./baz");
                             ~~~~~~~
!!! error TS2307: Cannot find module './baz'.
    
    //import modErr1 = require("\bar");
    
    //import mod  = require("./foo/bar");
    //import mod1 = require("../module paths/foo/bar");
    //import mod2 = require("foo/bar");
    
    